[gd_scene load_steps=6 format=2]

[ext_resource path="res://Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://Menu/MenuTheme.tres" type="Theme" id=2]
[ext_resource path="res://Menu/font.tres" type="DynamicFontData" id=3]
[ext_resource path="res://Menu/menu_background_bg.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 3 )

[node name="MenuRoot" type="CanvasLayer"]
layer = 10
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 1, 1.01789 )
texture = ExtResource( 4 )
expand = true

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SettingsBackground" type="ColorRect" parent="Control"]
anchor_bottom = 1.0
margin_right = 800.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control/SettingsBackground"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
custom_constants/separation = 20

[node name="Window" type="HBoxContainer" parent="Control/SettingsBackground/VBoxContainer"]
margin_right = 210.0
margin_bottom = 26.0
custom_constants/separation = 15

[node name="Label" type="Label" parent="Control/SettingsBackground/VBoxContainer/Window"]
margin_top = 3.0
margin_right = 72.0
margin_bottom = 23.0
theme = ExtResource( 2 )
text = "Window"

[node name="CheckBox" type="OptionButton" parent="Control/SettingsBackground/VBoxContainer/Window"]
margin_left = 87.0
margin_right = 210.0
margin_bottom = 26.0
theme = ExtResource( 2 )
text = "Windowed"
flat = true
items = [ "Windowed", null, false, 0, null, "Borderless Windowed", null, false, 1, null, "Fullscreen", null, false, 2, null ]
selected = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/SettingsBackground/VBoxContainer"]
margin_top = 46.0
margin_right = 210.0
margin_bottom = 77.0
custom_constants/separation = 15
alignment = 2

[node name="Master" type="HBoxContainer" parent="Control/SettingsBackground/VBoxContainer/VBoxContainer"]
margin_right = 210.0
margin_bottom = 31.0
custom_constants/separation = 15
alignment = 2

[node name="Label" type="Label" parent="Control/SettingsBackground/VBoxContainer/VBoxContainer/Master"]
margin_top = 5.0
margin_right = 68.0
margin_bottom = 25.0
theme = ExtResource( 2 )
text = "Volume"

[node name="current" type="Label" parent="Control/SettingsBackground/VBoxContainer/VBoxContainer/Master"]
margin_left = 83.0
margin_top = 5.0
margin_right = 114.0
margin_bottom = 25.0
rect_min_size = Vector2( 31, 0 )
theme = ExtResource( 2 )
text = "100"

[node name="HSlider" type="HSlider" parent="Control/SettingsBackground/VBoxContainer/VBoxContainer/Master"]
margin_left = 129.0
margin_right = 195.0
margin_bottom = 16.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
theme = ExtResource( 2 )
step = 0.0
value = 100.0
rounded = true
tick_count = 100
ticks_on_borders = true

[node name="Padding" type="Label" parent="Control/SettingsBackground/VBoxContainer/VBoxContainer/Master"]
margin_left = 210.0
margin_right = 210.0
margin_bottom = 31.0
text = "
"

[node name="Title" type="Label" parent="Control"]
margin_left = 192.0
margin_top = 48.0
margin_right = 192.0
margin_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "TitlePlaceholder"
align = 1
valign = 1

[node name="ButtonsVBOX" type="VBoxContainer" parent="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -141.0
margin_right = 232.0
grow_vertical = 0
hint_tooltip = "CanvasLayer"
custom_constants/separation = 11
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Continue" type="Button" parent="Control/ButtonsVBOX"]
visible = false
margin_right = 232.0
margin_bottom = 37.0
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Continue"
flat = true
align = 0

[node name="Start" type="Button" parent="Control/ButtonsVBOX"]
margin_right = 232.0
margin_bottom = 39.0
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Start"
flat = true
align = 0

[node name="StartFB" type="Button" parent="Control/ButtonsVBOX"]
visible = false
margin_top = 48.0
margin_right = 352.0
margin_bottom = 85.0
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Watch Lore Again"
flat = true
align = 0

[node name="Settings" type="Button" parent="Control/ButtonsVBOX"]
margin_top = 50.0
margin_right = 232.0
margin_bottom = 90.0
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Settings"
flat = true
align = 0

[node name="Exit" type="Button" parent="Control/ButtonsVBOX"]
margin_top = 101.0
margin_right = 232.0
margin_bottom = 141.0
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Exit"
flat = true
align = 0

[node name="Warning" type="Label" parent="Control"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -340.0
margin_bottom = 66.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource( 2 )
text = "Are you sure? Your data wil be lost. 
This cannot be undone
Click the button once more to confirm"
align = 2

[connection signal="item_selected" from="Control/SettingsBackground/VBoxContainer/Window/CheckBox" to="." method="select_window_mode"]
[connection signal="value_changed" from="Control/SettingsBackground/VBoxContainer/VBoxContainer/Master/HSlider" to="." method="master_volume_changed"]
[connection signal="pressed" from="Control/ButtonsVBOX/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Control/ButtonsVBOX/Start" to="." method="_on_Start_pressed"]
[connection signal="ready" from="Control/ButtonsVBOX/Start" to="Control/ButtonsVBOX/Start" method="grab_focus"]
[connection signal="pressed" from="Control/ButtonsVBOX/StartFB" to="." method="_on_StartFB_pressed"]
[connection signal="pressed" from="Control/ButtonsVBOX/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Control/ButtonsVBOX/Exit" to="." method="_on_Exit_pressed"]
